# cagouille

./: .gitignore  Cargo.toml  manage.py  requirements.txt
accounts/: schema.py
aiots/: admin.py  apps.py  models.py  schema.py  services.py
app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vue.config.js
app/src/: App.vue  (+2 more)
backend/: admin.py  apps.py  models.py  receivers.py  serializers.py  tables.py  urls.py  views.py
cabinets/: models.py
cagouille/: Cargo.toml  asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
cagouille-macro/: Cargo.toml
cagouille-macro/src/: component.rs  df.rs  html.rs  lib.rs  utils.rs
cagouille-macro/src/html/: lexer.rs  mod.rs  parser.rs
cagouille-macro/src/html/parser/: lexer.rs  mod.rs  rules.rs  symbols.rs
cagouille-macro/tests/: diff_test.rs  html_test.rs  simple_test.rs
cagouille/src/: df.rs  dom.rs  error.rs  event.rs  futures.rs  lib.rs  scheduler.rs  utils.rs
cagouille/src/component/: context.rs  ctx.rs  event.rs  function.rs  mod.rs  reactor.rs  state.rs
cagouille/src/component_legacy/: event.rs  function.rs  mod.rs  state.rs
cagouille/src/reactor/: atom.rs  effect.rs  interaction.rs  mod.rs  ray.rs  reactive.rs  reactor.rs  tracker.rs  wave.rs
cagouille/src/vdom/: attr.rs  comp.rs  df.rs  diff.rs  el.rs  element.rs  initialise.rs  mod.rs  mode.rs  mount.rs  node_key.rs  node_ref.rs  scope.rs
cagouille/src/vdom/comp/: concrete.rs  df.rs  driver.rs  mod.rs  mount.rs
cagouille/src/vdom/el/: attr.rs  event.rs  mod.rs  render.rs
cagouille/src/vdom/el/attr/: mod.rs  render.rs  value.rs
documents/: models.py
ems/: admin.py  apps.py  forms.py  models.py  receivers.py  services.py  signals.py  tables.py  urls.py  views.py
graphene_plus/: __init__.py
objects/: e59161854f8f9dbd95b81329b859601a2682b076537216547bc03d87a21bfc47_dvkGxXf
reactor/: Cargo.toml
reactor/src/: action.rs  async.rs  atom.rs  conf.rs  context.rs  core.rs  interaction.rs  interface.rs  lib.rs  measure.rs  pilot.rs  ray.rs  reaction.rs  scheduler.rs  tracker.rs
reactor/src/local/: atom.rs  context.rs  core.rs  measure.rs  mod.rs  ray.rs  tracker.rs
reactor/src/local/action/: any.rs  mod.rs
reactor/src/local/interaction/: any.rs  bound.rs  mod.rs
reactor/src/local/interface/: signal.rs  slot.rs
reactor/src/local/reaction/: any.rs  mod.rs
reactor/src/sync/: atom.rs  context.rs  core.rs  measure.rs  mod.rs  ray.rs  tracker.rs
reactor/src/sync/action/: any.rs  mod.rs
reactor/src/sync/interaction/: any.rs  bound.rs  mod.rs
reactor/src/sync/interface/: mod.rs  signal.rs  slot.rs
reactor/src/sync/reaction/: any.rs  mod.rs
suivis/: admin.py  models.py  schema.py  services.py
systemd/: cagouille-beat.service  cagouille-worker.service  cagouille.service
web/: urls.py  views.py
workflow_engine/: __init__.py  apps.py  engine.py  flows.py  forms.py  models.py  nodes.py  schema.py  signals.py  status.py  tasks.py
workflow_engine_tests/: flows.py  forms.py  models.py  tests.py
workflows/: admin.py  apps.py  engine.py  flows.py  forms.py  models.py  receivers.py  schema.py  signals.py  tasks.py
yalp/: Cargo.toml
yase/: Cargo.toml
yase/src/: lib.rs
yase/src/wasm/: mod.rs  task.rs  timer.rs
(+143 files in other folders)
