[package]
name = "cagouille-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
phf = "0.11.2"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
yalp = {path = "../yalp"}

[dev-dependencies]
cagouille = {path = "../cagouille"}
