[package]
name = "reactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "macros", "sync", "time"] }
yase = {path = "../yase"}

[features]
wasm = ["yase/wasm"]
tokio = ["yase/tokio"]
sync = []
local = []