[package]
name = "yase"
description = "Yet another aSync executor - a unified architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "macros", "sync", "time"] }

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies]
wasm-bindgen = "0.2.91"

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
default = []
wasm = []
tokio = ["tokio"]
